# DoDara

./: .gitignore  README.md
app/android/: settings.gradle
app/mobile-ui/: .gitignore  (+6 more)
service/: Cargo.toml  README.md  database.db
service/migrations/2022-12-13-183857_stars/: up.sql
service/migrations/2022-12-13-183904_exercises/: down.sql  up.sql
service/migrations/2022-12-13-190203_exercises_results/: down.sql  up.sql
service/src/: main.rs  schema.rs
service/src/api/: mod.rs
service/src/api/rest/: mod.rs
service/src/api/rest/exercise/: history.rs  mod.rs  new.rs  result.rs
service/src/api/rest/id/: exists.rs  mod.rs  new.rs
service/src/api/rest/legal/: mod.rs
service/src/api/rest/root/: mod.rs
service/src/api/rest/stars/: get.rs  mod.rs  payout.rs
service/src/content/: mod.rs
service/src/db/: mod.rs
service/src/db/entities/: mod.rs
service/src/db/entities/exercise/: mod.rs  models.rs  new.rs  result.rs
service/src/db/entities/stars/: actions.rs  mod.rs  models.rs
service/src/db/utils/: mod.rs
service/src/dtos/: mod.rs  request.rs  response.rs
service/src/helper/: mod.rs
service/src/helper/bool/: mod.rs
service/src/helper/cors/: mod.rs
service/src/helper/dotenv/: mod.rs
service/src/helper/exercise/: mathmatics.rs  mod.rs
service/src/helper/fs/: copy.rs  exists.rs  mod.rs
service/src/helper/logger/: mod.rs
service/src/helper/port/: mod.rs
service/src/helper/request/: get.rs  mod.rs
service/src/helper/serde/: mod.rs
service/src/helper/time/: mod.rs
service/src/helper/uuid/: mod.rs
service/src/router/: mod.rs
(+137 files in other folders)
