[package]
name = "app_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
clokwerk = "0.3.5"
log = "0.4"
dotenv = "0.15.0"
warp = "0.3.2"
pretty_env_logger = "0.4.0"
chrono = "0.4"
curl = "0.4.43"
tokio = { version = "1.15.0", features = ["full"] }
eval = "0.4.3"
tokio-stream = "0.1.9"

[dependencies.reqwest]
version = "0.11.9"
features = ["json", "blocking"]

[dependencies.diesel]
version = "1.4.8"
default-features = false
features = ["sqlite"]

[dependencies.serde]
version = "1.0.132"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.74"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]
